--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,14 @@ version = "1.0.75"
 [dependencies.binrw]
 version = "0.13.1"
 
+[dependencies.iref]
+version = "3.1.3"
+
 [dependencies.miniz_oxide]
 version = "0.7.1"
+
+[dependencies.positioned-io]
+version = "0.3.3"
 
 [dependencies.thiserror]
 version = "1.0.50"
