--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,8 @@ version = "0.3.3"
 [dependencies.thiserror]
 version = "1.0.50"
 
+[dependencies.walkdir]
+version = "2.4.0"
+
 [dev-dependencies.util]
 path = "util"
