--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ version = "0.7.1"
 [dependencies.positioned-io]
 version = "0.3.3"
 
+[dependencies.rand]
+version = "0.8.5"
+
 [dependencies.thiserror]
 version = "1.0.50"
 
