--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ version = "0.13.1"
 [dependencies.iref]
 version = "3.1.3"
 
+[dependencies.itertools]
+version = "0.12.0"
+
 [dependencies.miniz_oxide]
 version = "0.7.1"
 
